--- a/main.css
+++ b/main.css
@@ -41,7 +41,9 @@ article figure {
 
 #top_menu li {
 	display: inline-block;
-	padding: 5px;
+	padding: 15px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 	font: bold 14px Tahoma;
 }
 
