--- a/main.css
+++ b/main.css
@@ -25,17 +25,18 @@ article figure {
 	background: green;
 	display: inline-block;
 	float: left;
-	margin:16px;
+	margin-left: 2.5%;
+	margin-top: 1.5%;
+	margin-bottom: 2%;
 }
 
+
 #top_header {
-	background: yellow;
-	border: 1px solid blue;
 	padding: 20px;
+	margin-left: 2%;
 }
 
 #top_menu {
-	background: #22CCCC;
 	padding-left: 15px;
 }
 
@@ -50,7 +51,6 @@ article figure {
 #main_section {
 	height: 350px;
 	width: 95%;
-	background: blue;
 	margin-left: 2.5%;
 	margin-top: 2%;
 
@@ -72,3 +72,54 @@ article figure {
 	border-top: 2px solid green;
 }
 
+#slider1 {
+    width: 1221px; /* important to be same as image width */
+    height: 350px; /* important to be same as image height */
+    position: absolute; /* important */
+	overflow: hidden; /* important */
+}
+
+#slider1Content {
+    width: 100%; /* important to be same as image width or wider */
+    position: absolute;
+	top: 0;
+	margin-left: 0;
+}
+.slider1Image {
+    float: left;
+    position: relative;
+	display: none;
+}
+.slider1Image span {
+    position: absolute;
+	font: 10px/15px Arial, Helvetica, sans-serif;
+    padding: 10px 13px;
+    width: 768px;
+    background-color: #000;
+    filter: alpha(opacity=70);
+    -moz-opacity: 0.7;
+	-khtml-opacity: 0.7;
+    opacity: 0.7;
+    color: #fff;
+    display: none;
+}
+.clear {
+	clear: both;
+}
+.slider1Image span strong {
+    font-size: 14px;
+}
+.left {
+	top: 0;
+    left: 0;
+	width: 110px !important;
+	height: 280px;
+}
+.right {
+	right: 0;
+	bottom: 0;
+	width: 90px !important;
+	height: 290px;
+}
+
+ul { list-style-type: none;}
