--- a/public/main.css
+++ b/public/main.css
@@ -9,7 +9,7 @@ section, footer, aside, nav, hgroup {
 
 body {
 	text-align: center;
-	background-color: #F5FFFA;
+	background-color: #F0F2F0;
 	font-family: Arial,Helvetica,sans-serif;
 }
 
@@ -26,41 +26,48 @@ article img{
 
 
 #top_header {
-	margin-left: -1%;
-	margin-top: 2.5%;
+	margin-top: 1.5%;
 	font-size: 10px;
-	width:30%;
+	width:100%;
+	/*border: 1px blue solid;*/
 }
 
+#top_header img, h1{
+	float:center;
+	text-indent: -9999px;
+}		
+
 #top_menu {
-	width: 50%;
-	float: right;
-	margin-right: 10%;
-	margin-top: -3%;
+	width: 45%;
+	float: left;
+	margin-top: -2%;
 }
 
 #top_menu li {
 	display: inline-block;
-	padding: 15px;	
-	padding-bottom: 5px;
+	padding-left: 35px;
+	float:right;	
 	font: bold 14px;
 }
 
-#main_section {
-	height: 350px;
-	width: 95%;
-	margin-left: 2.5%;
-	margin-top: 3%;
-
-	/*margin: 30px; /*660 + 30 + 30 = 720px ocupados, 280px libres */
+#top_menu2 {
+	width: 45%;
+	float: right;
+	margin-top: -2%;
 }
 
-#news_aside {
-	float: left;
-	width: 220px;
-	padding: 30px;
-	margin: 20px 0px;
-	background: #66DDDD;
+#top_menu2 li {
+	display: inline-block;
+	padding-right: 35px;
+	float:left;	
+	font: bold 14px;
+}
+#main_section {
+	height: 350px;
+	width: 100%;
+	margin-top: 2%;
+
+	/*margin: 30px; /*660 + 30 + 30 = 720px ocupados, 280px libres */
 }
 
 #the_footer {
@@ -71,10 +78,11 @@ article img{
 }
 
 #slider1 {
-    width: 95%; /* important to be same as image width */
+    width: 85%; /* important to be same as image width */
     height: 50%; /* important to be same as image height */
     position: absolute; /* important */
 	overflow: hidden; /* important */
+	margin-left: 7.5%;
 }
 
 #slider1Content {
