--- a/public/main.css
+++ b/public/main.css
@@ -20,12 +20,13 @@ header {
 }
 
 .logo {
-	width: 5%;
+	width: 12%;
 	display: block;
 	margin: 0 auto;
 }
 
 .logo img {
+	margin-top: 0.5%;
 	width: 100%;
 	height: auto;
 }
@@ -132,4 +133,8 @@ header {
 	width: 100%;
 	height: 20%;
 	background-color: #FFF;	
+}
+
+.secciones div p {
+	padding: 5%;
 }
