solucionado login local

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,10 +50,10 @@
 			</div>
 			
 			<div class="container">
-				<div class="jumbotron text-center">
+				<div class="content">
 					<p>Inicia sesión o regístrate:</p>
-					<a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Regístrate</a>
-					<a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Inicia sesión</a>
+					<a href="/login" class="boton_form"><span class="fa fa-user"></span> Regístrate</a>
+					<a href="/signup" class="boton_form"><span class="fa fa-user"></span> Inicia sesión</a>
 				</div>
 			</div>	
 
