--- a/public/css/main.css
+++ b/public/css/main.css
@@ -91,39 +91,58 @@ header {
 	font-style: italic;
 	font-family: 'Old Standard TT', serif;
 	margin-top: 5%;
+	margin-bottom: 5%;
 }
 
-.btnDescubre {
-	margin: 3% 0 0 41%;
-	width: 18%;
-	height: 50px;
-	background-color: #FFF;
+.container-login {
+	margin: 0 auto;
+	padding-top: 0.5%;
+	width: 25%;
+	height: 75px;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	text-align: center;
+	background-color: rgba(245, 255, 250, 0.8)
+}
+.content a{
+	color:#303030;
+}
+
+.boton-log{
+	margin: 0 5% 0 5%;
+	padding: 1% ;
+	width: 40%;
+	float: left;
+	/*background-color: #FFF;*/
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	text-align: center;
+	background-color: rgba(255, 255, 255, 0.8)
+}
+
+.boton span{
+	margin-right: 3%; 
 }
 
 .navRedes {
 	width: 36%;
-	margin: 4% 0 0 32%;
+	margin: 0 auto;
+	border: 1px solid blue;
 }
 
 .navRedes img {
-	width: 8%;
+	width: 9%;
 }
 
 .navRedes ul {
 	list-style: none;
-	margin: 0 auto;
+	/*margin: 0 auto;*/
 }
 
 .navRedes ul li {
 	display: inline;
-}
-
-.navRedes ul li a {
-	padding: 7%;
 }
 
 .secciones {	
