--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,21 +49,21 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>
 			
-			<div class="container">
+			<div class="container-login">
 				<div class="content">
 					<p>Inicia sesión o regístrate:</p>
-					<a href="/login" class="boton_form"><span class="fa fa-user"></span> Regístrate</a>
-					<a href="/signup" class="boton_form"><span class="fa fa-user"></span> Inicia sesión</a>
+					<div class="boton-log"><a href="/login" class="boton_form"><span class="fa fa-user"></span>Inicia sesión</a></div>
+					<div class="boton-log"><a href="/signup" class="boton_form"><span class="fa fa-user"></span>Regístrate<a></div>
 				</div>
 			</div>	
 
 			<div>
 				<nav class="navRedes">
 					<ul>						
-						<li><a href="#"><img src="img/facebook.png" /></a></li>
-						<li><a href="#"><img src="img/google_plus.png" /></a></li>
-						<li><a href="#"><img src="img/twitter.png" /></a></li>
-						<li><a href="#"><img src="img/pinterest.png" /></a></li>			
+						<li><a href="#"><img src="img/facebook.png" ></a></li>
+						<li><a href="#"><img src="img/google_plus.png"></a></li>
+						<li><a href="#"><img src="img/twitter.png" ></a></li>
+						<li><a href="#"><img src="img/pinterest.png" ></a></li>
 					</ul>				
 				</nav>
 			</div>
