--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
 			
 			<nav class="menu">
 				<ul>
-					<li class="active"><a href="#">HOME</a></li>
+					<li class="active"><a href="">HOME</a></li>
 					<li><a href="#rutas">RUTAS</a></li>
 					<li><a id="apintxos" href="#pintxos">PINTXOS</a></li>
 					
@@ -33,12 +33,12 @@
 				<ul>
 					<li><a href="#bares">BARES</a></li>
 					<li><a href="#calendario">CALENDARIO</a></li>
-					<li><a href="#">ABOUT</a></li>
+					<li><a href="">ABOUT</a></li>
 				</ul>				
 			</nav>
 
 			<div class="logo">
-				<a href="#"><img src="img/logo_pintxopo_malo.png" /></a>
+				<a href=""><img src="img/logo_pintxopo_malo.png" /></a>
 			</div>
 
 		</header>
