--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,7 +12,7 @@ body {
 
 header {
 	width: 100%;
-	height: 1%;
+	/*height: 1%;*/
 	position: fixed;
 	height: auto;
 	top: 0;
@@ -157,12 +157,11 @@ header {
 .secciones div {
 	margin-bottom: 3%;
 	width: 100%;
-	height: 20%;
-	background-color: #FFF;
+	background-color: #FFF;	
 }
 
 .secciones h1 {
-	padding: 8% 0 0 0;
+	padding: 3% 0 0 0;
 	font-family: 'Old Standard TT', serif;
 	color: #303030;
 	text-align: center;
@@ -180,11 +179,11 @@ header {
 }
 
 .secciones p {
-	padding: 5%;
+	padding: 5% 5% 1% 5%;
 }
 
 #pintxos{
-	height: 600px;
+	height: 500px;
 }
 
 #pintxos article {
