--- a/public/css/main.css
+++ b/public/css/main.css
@@ -182,17 +182,13 @@ header {
 	padding: 5% 5% 1% 5%;
 }
 
-#pintxos{
-	height: 500px;
-}
-
 #pintxos article {
-	margin: 1% 0 0 3.8%;
+	margin: 1% 0 4% 3.8%;
 	display: inline-block;
 	width: 20%;
 	height: 300px;
 	text-align: center;
-	float:left;
+	/*float:left;*/
 	box-shadow: 1px 1px 6px 0px rgba(50, 50, 50, 0.75);
 	overflow: hidden;
 }
