--- a/public/css/main.css
+++ b/public/css/main.css
@@ -188,13 +188,13 @@ header {
 	width: 20%;
 	height: 300px;
 	text-align: center;
-	/*float:left;*/
 	box-shadow: 1px 1px 6px 0px rgba(50, 50, 50, 0.75);
 	overflow: hidden;
 }
 
 #pintxos article img {
 	width: 100%;
+	max-height: 160px;
 }
 
 
