--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,15 +38,15 @@
 			</nav>
 
 			<div class="logo">
-				<a href=""><img src="img/logo_pintxopo_malo.png" /></a>
+				<a href=""><img src="img/logo_trazado.png" /></a>
 			</div>
 
 		</header>
 
 		<div class="mainSection">
 			<div class="bienvenida">
-				<h2>Lorem ipsum sit amet</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<h2>La cultura del ocio gastronómico</h2>
+				<p>El sibaritismo gastronómico, unido a la inteligencia contribuye a hacer a los hombres amables.</p>
 			</div>
 			
 			<div class="container-login">
