--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,23 +17,25 @@ header {
 	height: auto;
 	top: 0;
 	background-color: #FFF;
+	box-shadow: 1px 1px 6px 0px rgba(50, 50, 50, 0.75);
 }
 
 .logo {
-	width: 12%;
+	width: 13%;
 	display: block;
 	margin: 0 auto;
 }
 
 .logo img {
-	margin-top: 0.5%;
+	margin-top: 3%;
+	margin-bottom: 3%;
 	width: 100%;
 	height: auto;
 }
 
 .mainHeader nav {	
 	height: 2%;	
-	margin-top: 1.4%;
+	margin-top: 3%;
 	font-weight: bold;
 }
 
@@ -83,11 +85,12 @@ header {
 	margin: 16% 0 6% 25%;
 	color: #FFF;
 	text-align: center;
-	font-size: 160%;
+	font-size: 200%;
 }
 
 .bienvenida h2 {
 	font-family: 'Lora', serif;
+	font-size: 150%;
 }
 
 .bienvenida p {
@@ -132,7 +135,7 @@ header {
 
 .navRedes {
 	width: 36%;
-	margin: 3% 0 0 32%;
+	margin: 4% 0 0 32%;
 }
 
 .navRedes img {
