--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
 			</nav>
 
 			<div class="logo">
-				<a href=""><img src="img/logo_trazado.png" /></a>
+				<a href=""><img src="img/logo_trazado_recortado.png" /></a>
 			</div>
 
 		</header>
