--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,21 +21,21 @@ header {
 }
 
 .logo {
-	width: 13%;
+	width: 11%;
 	display: block;
 	margin: 0 auto;
+	margin-top: 1%;
+	margin-bottom: 1%;
 }
 
 .logo img {
-	margin-top: 3%;
-	margin-bottom: 3%;
 	width: 100%;
 	height: auto;
 }
 
 .mainHeader nav {	
 	height: 2%;	
-	margin-top: 3%;
+	margin-top: 2%;
 	font-weight: bold;
 }
 
@@ -82,7 +82,7 @@ header {
 
 .bienvenida {
 	width: 50%;
-	margin: 16% 0 6% 25%;
+	margin: 16% 0 4% 25%;
 	color: #FFF;
 	text-align: center;
 	font-size: 200%;
@@ -183,6 +183,10 @@ header {
 
 .secciones p {
 	padding: 5% 5% 1% 5%;
+}
+
+.pintxos_class {
+	top: 1250px;
 }
 
 #pintxos article {
