--- a/public/css/main.css
+++ b/public/css/main.css
@@ -170,6 +170,7 @@ header {
 	text-align: center;
 	font-size: 250%;
 	font-weight: 400;
+	background-color: #FFF;
 }
 
 .secciones h2 {
@@ -178,15 +179,21 @@ header {
 	color: #303030;
 	text-align: center;
 	font-size: 200%;
-	font-weight: 400;	
+	font-weight: 400;
 }
 
 .secciones p {
 	padding: 5% 5% 1% 5%;
 }
 
+#pintxos {
+	padding-top: 100px;
+    margin-top: -100px;
+    background-color: transparent;
+}
+
 .pintxos_class {
-	top: 1250px;
+	background-color: #FFF;
 }
 
 #pintxos article {
@@ -203,7 +210,6 @@ header {
 	width: 100%;
 	max-height: 160px;
 }
-
 
 #pintxos h3 {
 	margin: 5% 0 3% 0; 	
