--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,8 +12,32 @@
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
 
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-		<script type="text/javascript" src="js/pintxos.js"></script>	
-
+		<script type="text/javascript" src="js/pintxos.js"></script>
+		
+		<script type="text/javascript">
+		
+			$(function() {
+				
+				$('a[href*=#]:not([href=#])').click(function() {
+					
+					//if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'')) {
+						var target = $(this.hash);
+						target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+						if (target.length) {
+							$('html,body').animate({
+								
+								scrollTop: target.offset().top
+								
+							}, 500);
+						return false;
+						}
+				//	}
+				
+				});
+				
+			});
+			
+		</script>
 	</head>
 
 	<body>
@@ -25,7 +49,6 @@
 					<li class="active"><a href="">HOME</a></li>
 					<li><a href="#rutas">RUTAS</a></li>
 					<li><a id="apintxos" href="#pintxos">PINTXOS</a></li>
-					
 				</ul>				
 			</nav>
 
@@ -77,7 +100,7 @@
 					</p>
 				</div>
 
-				<div id="pintxos" class="pintxos_class">
+				<div id="pintxos">
 					
 				</div>
 
