--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,47 @@
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 		<script type="text/javascript" src="js/pintxos.js"></script>
 		
+		
+		
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTcGmuWEwzwZXpcYRMguIQoWAc7yrw6Kc&sensor=false">
+</script>
+
+<script>
+function initialize()
+{
+var mapProp = {
+  center:new google.maps.LatLng(51.508742,-0.120850),
+  zoom:5,
+  mapTypeId:google.maps.MapTypeId.ROADMAP
+  };
+var map=new google.maps.Map(document.getElementById("rutas")
+  ,mapProp);
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+
+function showError(error)
+    {
+        switch(error.code) 
+        {
+        case error.PERMISSION_DENIED:
+          doc.innerHTML="Request for Geolocation denied by the user."
+          break;
+        case error.POSITION_UNAVAILABLE:
+          doc.innerHTML="Unavailable location information."
+          break;
+        case error.TIMEOUT:
+          doc.innerHTML="Location request timed out."
+          break;
+        case error.UNKNOWN_ERROR:
+          doc.innerHTML="UNKNOWN_ERROR."
+          break;
+        }
+    }
+</script>
+		
+		
+		
 		<script type="text/javascript">
 		
 			$(function() {
@@ -67,6 +108,28 @@
 			    });
 			});
 			
+		</script>
+		
+		<script type="text/javascript">
+		
+			var startY = 500;
+	
+			$(window).scroll(function(){
+			    checkY();
+			});
+			
+			function checkY(){
+			    if( $(window).scrollTop() > startY ){
+			        $('.navRedesLateral').animate({'opacity':'1'},300);
+			    }
+			    else{
+			        $('.navRedesLateral').animate({'opacity':'0'},300);
+			    }
+			}
+			
+			// Do this on load just in case the user starts half way down the page
+			checkY();
+		
 		</script>
 		
 	</head>
@@ -125,12 +188,7 @@
 			<div class="secciones">
 
 				<div id="rutas">
-					<div>
-						<h1>Rutas</h1>
-						<h2>Descubre las mejores rutas</h2>										
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						</p>
-					</div>
+					
 				</div>
 
 				<div id="pintxos">
@@ -154,6 +212,10 @@
 						</p>
 					</div>
 				</div>
+				
+				<div id="googleMap">
+		
+				</div>
 
 			</div>
 
@@ -161,7 +223,7 @@
 		
 		<div>
 			<nav class="navRedesLateral">
-				<ul>						
+				<ul>				
 					<li><a href="#"><img src="img/facebook.png" ></a></li>
 					<li><a href="#"><img src="img/google_plus.png"></a></li>
 					<li><a href="#"><img src="img/twitter.png" ></a></li>
@@ -169,6 +231,8 @@
 				</ul>				
 			</nav>
 		</div>
+		
+		
 
 	</body>
 
