--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Node Authentication</title>
+	<title>The Pintxopo</title>
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
 	<style>
@@ -24,6 +24,10 @@
 	<!-- LOGIN FORM -->
 	<form action="/signup" method="post">
 		<div class="form-group">
+			<label>Nombre de usuario</label>
+			<input type="text" class="form-control" name="nombre">
+		</div>
+		<div class="form-group">
 			<label>Email</label>
 			<input type="text" class="form-control" name="email">
 		</div>
@@ -37,8 +41,8 @@
 
 	<hr>
 
-	<p>Already have an account? <a href="/login">Login</a></p>
-	<p>Or go <a href="/">home</a>.</p>
+	<p>¿Ya estás registrado? <a href="/login">Inicia sesión</a></p>
+	<p>o vete a <a href="/">inicio</a>.</p>
 
 </div>
 
