--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,8 +23,8 @@
 			function initialize() {
 				
 				var mapProp = {
-					center:new google.maps.LatLng(51.508742,-0.120850),
-					zoom:5,
+					center:new google.maps.LatLng(43.3133505, -1.9782344),
+					zoom:14,
 					mapTypeControl: false,
 					mapTypeId:google.maps.MapTypeId.ROADMAP
 				};
@@ -170,11 +170,11 @@
 			</div>
 
 			<div class="secciones">
-
+				
 				<div id="rutas">
 					
 				</div>
-
+				
 				<div id="pintxos">
 					
 				</div>
