--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,8 +3,8 @@
 <html>
 <head>
 	<title>The Pintxopo</title>
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="css/profile.css" ><!--Estilos principales-->
+		<link href='https://fonts.googleapis.com/css?family=Lora|PT+Sans+Narrow|Old+Standard+TT:400italic,400|Tangerine|Open+Sans+Condensed:300|Courgette' rel='stylesheet' type='text/css'>
 	<style>
 		body 		{ padding-top:80px; word-wrap:break-word; }
 	</style>
@@ -14,7 +14,7 @@
 
 	<div class="page-header text-center">
 		<h1><span class="fa fa-anchor"></span> Perfil</h1>
-		<a href="/logout" class="btn btn-default btn-sm">desconectar</a>
+		<a href="/logout" class="btn btn-default btn-sm">Desconectar</a>
 	</div>
 
 	<div class="row">
