--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,7 @@
 						if (target.length) {
 							$('html,body').animate({
 							
-								scrollTop: target.offset().top
+								scrollTop: target.offset().top - 100
 							
 							}, 500);
 							return false;
